# agent-as-service

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  BUG_REPORT_AND_FIXES.md  CHANGELOG.md  CLIENT_README.md  CODE_AUDIT_AND_DEPLOYMENT.md  COMPETITIVE_GAP_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST-client.in  PUBLISHING.md  README-DEPLOYMENT.md  README.md  SDK_VERIFICATION.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  TEST_SUITE_SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  install-client.ps1  install-client.sh  pyproject.toml  pytest.ini  requirements.txt  setup-client.py
.github/workflows/: ci-cd.yml
docs/: API.md  DEPLOYMENT.md  FAQ.md  FEATURES.md  HOSTED_SERVICE.md  MCP_2025_COMPLIANCE_AUDIT.md  MCP_SERVERS.md  QUICKSTART.md  TECHNICAL.md
examples/: advanced_usage.py  api_server.py  basic_usage.py  hosted_service_example.py
k8s/: deployment.yaml  ingress.yaml
monitoring/: alertmanager.yml  prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml
nginx/: nginx.conf
scripts/: deploy.sh  init-db.sql  rollback.sh
src/aaas/: __init__.py  agent_manager.py  api.py  auth.py  autoscaler.py  cli.py  client.py  config.py  mcp_manager.py  mcp_models.py  metrics.py  models.py  server.py
tests/: README.md  __init__.py  conftest.py  test_agent_manager.py  test_agent_types.py  test_api.py  test_api_endpoints.py
